jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_alphanumeric_identifiers.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: "i32",
        offset: 0,
        kind: Identifier,
    },
]
