jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_annotation.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: "@",
        offset: 0,
        kind: At,
    },
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: "test",
        offset: 1,
        kind: Identifier,
    },
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: "(",
        offset: 5,
        kind: LeftParen,
    },
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: "\"(local.get 0)\"",
        offset: 6,
        kind: String,
    },
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: ")",
        offset: 21,
        kind: RightParen,
    },
    Token {
        file: "test.1",
        module: "module/test.1",
        lexme: "",
        offset: 22,
        kind: Eof,
    },
]
