jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_array.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        kind: Let,
        span: Span {
            file: "test_tokenize_array",
            module: "module/test_tokenize_array",
            start: 0,
            end: 3,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            file: "test_tokenize_array",
            module: "module/test_tokenize_array",
            start: 4,
            end: 7,
        },
    },
    Token {
        kind: Equal,
        span: Span {
            file: "test_tokenize_array",
            module: "module/test_tokenize_array",
            start: 8,
            end: 9,
        },
    },
    Token {
        kind: LeftBracket,
        span: Span {
            file: "test_tokenize_array",
            module: "module/test_tokenize_array",
            start: 10,
            end: 11,
        },
    },
    Token {
        kind: Integer,
        span: Span {
            file: "test_tokenize_array",
            module: "module/test_tokenize_array",
            start: 11,
            end: 12,
        },
    },
    Token {
        kind: Comma,
        span: Span {
            file: "test_tokenize_array",
            module: "module/test_tokenize_array",
            start: 12,
            end: 13,
        },
    },
    Token {
        kind: Integer,
        span: Span {
            file: "test_tokenize_array",
            module: "module/test_tokenize_array",
            start: 14,
            end: 15,
        },
    },
    Token {
        kind: Comma,
        span: Span {
            file: "test_tokenize_array",
            module: "module/test_tokenize_array",
            start: 15,
            end: 16,
        },
    },
    Token {
        kind: Integer,
        span: Span {
            file: "test_tokenize_array",
            module: "module/test_tokenize_array",
            start: 17,
            end: 18,
        },
    },
    Token {
        kind: RightBracket,
        span: Span {
            file: "test_tokenize_array",
            module: "module/test_tokenize_array",
            start: 18,
            end: 19,
        },
    },
    Token {
        kind: Semi,
        span: Span {
            file: "test_tokenize_array",
            module: "module/test_tokenize_array",
            start: 19,
            end: 20,
        },
    },
    Token {
        kind: Eof,
        span: Span {
            file: "test_tokenize_array",
            module: "module/test_tokenize_array",
            start: 20,
            end: 20,
        },
    },
]
