jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_braces.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        file: "test.1",
        lexme: "{",
        offset: 0,
        kind: LeftBrace,
    },
    Token {
        file: "test.1",
        lexme: "}",
        offset: 1,
        kind: RightBrace,
    },
]
