jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_class_declaration.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        kind: Class,
        span: Span {
            file: "test_tokenize_class_declaration",
            module: "module/test_tokenize_class_declaration",
            start: 0,
            end: 5,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            file: "test_tokenize_class_declaration",
            module: "module/test_tokenize_class_declaration",
            start: 6,
            end: 7,
        },
    },
    Token {
        kind: LeftBrace,
        span: Span {
            file: "test_tokenize_class_declaration",
            module: "module/test_tokenize_class_declaration",
            start: 8,
            end: 9,
        },
    },
    Token {
        kind: Constructor,
        span: Span {
            file: "test_tokenize_class_declaration",
            module: "module/test_tokenize_class_declaration",
            start: 10,
            end: 21,
        },
    },
    Token {
        kind: LeftParen,
        span: Span {
            file: "test_tokenize_class_declaration",
            module: "module/test_tokenize_class_declaration",
            start: 21,
            end: 22,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            file: "test_tokenize_class_declaration",
            module: "module/test_tokenize_class_declaration",
            start: 22,
            end: 23,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            file: "test_tokenize_class_declaration",
            module: "module/test_tokenize_class_declaration",
            start: 23,
            end: 24,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            file: "test_tokenize_class_declaration",
            module: "module/test_tokenize_class_declaration",
            start: 25,
            end: 28,
        },
    },
    Token {
        kind: RightParen,
        span: Span {
            file: "test_tokenize_class_declaration",
            module: "module/test_tokenize_class_declaration",
            start: 28,
            end: 29,
        },
    },
    Token {
        kind: LeftBrace,
        span: Span {
            file: "test_tokenize_class_declaration",
            module: "module/test_tokenize_class_declaration",
            start: 30,
            end: 31,
        },
    },
    Token {
        kind: RightBrace,
        span: Span {
            file: "test_tokenize_class_declaration",
            module: "module/test_tokenize_class_declaration",
            start: 31,
            end: 32,
        },
    },
    Token {
        kind: RightBrace,
        span: Span {
            file: "test_tokenize_class_declaration",
            module: "module/test_tokenize_class_declaration",
            start: 33,
            end: 34,
        },
    },
    Token {
        kind: Eof,
        span: Span {
            file: "test_tokenize_class_declaration",
            module: "module/test_tokenize_class_declaration",
            start: 34,
            end: 34,
        },
    },
]
