jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_comments.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        kind: Eof,
        span: Span {
            file: "test_tokenize_comments",
            module: "module/test_tokenize_comments",
            start: 28,
            end: 28,
        },
    },
]
