jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_equal.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        kind: Equal,
        span: Span {
            file: "test_tokenize_equal",
            module: "module/test_tokenize_equal",
            start: 0,
            end: 1,
            [content]: "=",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            file: "test_tokenize_equal",
            module: "module/test_tokenize_equal",
            start: 1,
            end: 1,
            [content]: "",
        },
    },
]
