jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_greater_than.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        kind: Greater,
        span: Span {
            file: "test_tokenize_greater_than",
            module: "module/test_tokenize_greater_than",
            start: 0,
            end: 1,
            [content]: ">",
        },
    },
    Token {
        kind: Eof,
        span: Span {
            file: "test_tokenize_greater_than",
            module: "module/test_tokenize_greater_than",
            start: 1,
            end: 1,
            [content]: "",
        },
    },
]
