jswt-tokenizer/src/snapshots/jswt_tokenizer__test__tokenize_hexadecimal_number.snap
---
source: jswt-tokenizer/src/lib.rs
expression: actual

---
[
    Token {
        kind: HexInteger,
        span: Span {
            file: "test_tokenize_hexadecimal_number",
            module: "module/test_tokenize_hexadecimal_number",
            start: 0,
            end: 11,
        },
    },
    Token {
        kind: Eof,
        span: Span {
            file: "test_tokenize_hexadecimal_number",
            module: "module/test_tokenize_hexadecimal_number",
            start: 11,
            end: 11,
        },
    },
]
